# TerminalBot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
install/: install.sh
install/fallback/: run_bot.sh
install/fallback/launchd/: README.md  com.terminalbot.plist
install/fallback/systemd/: README.md  terminalbot.service
install/pm2/: README.md  ecosystem.config.js
openspec/changes/telegram-terminal-control/: design.md  proposal.md  tasks.md
openspec/changes/telegram-terminal-control/specs/session-bridge/: spec.md
openspec/changes/telegram-terminal-control/specs/telegram-bot/: spec.md
openspec/changes/telegram-terminal-control/specs/terminal-capture/: spec.md
src/: __init__.py  health_monitor.py  main.py  retry_policy.py  session_bridge.py  telegram_bot.py  terminal_capture.py
tests/: DEPLOYMENT_TESTING.md  test_config.py  test_health_monitor.py  test_retry.py
