[project]
name = "terminalbot"
version = "0.1.0"
description = "Control tmux terminal sessions remotely via Telegram"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=21.0",
    "libtmux>=0.37.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
terminalbot = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
